--- a/zxmn-main/zxmn-main/DAVI/index.html
+++ b/zxmn-main/zxmn-main/DAVI/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-<h1 class="cabecalho-tema">Trascunho</h1>
+<h1 class="cabecalho-tema">site modelo</h1>
 <ul class="cabecalho-lista">
 <li class="cabecalho-item">escola</li>
 <li class="cabecalho-item">estudante</li>
@@ -21,16 +21,7 @@
  <p> class=<escola-texto-um><inserir o primeiro paragrafo></p>
     <p> class= <escola-texto-dois>inserir o segundo paragrafo</p>
         <div>
-            <img class="escola imagem"src= escola-imagem.jpg alt="Escola imagem">
-            <section>
-                </section class=estudante>
-                <h2 class="estudante titulo">quem são nossos estudantes <h2>
-                    <div class="estudante todos">
-                        <span></span>
-                        <div class="escola-div">
-    <img class="estudante-imagem" src="dowload.jpg" alt="">
-   <h3 class="estudante-nome">Vanessa </h3>     
-                   
-
-</body>
-</html>
+<img class="escola-imagem" src="escola-imagem.jpg" alt="escola-imagem"> class
+<section>
+<section class=estudante
+ h2 class="estudante titulo">quem são nossos estudantes </h2>
