--- a/zxmn-main/zxmn-main/zxmn-main/DAVI/index.html
+++ b/zxmn-main/zxmn-main/zxmn-main/DAVI/index.html
@@ -21,6 +21,7 @@
  <p> class=<escola-texto-um><inserir o primeiro paragrafo></p>
     <p> class= <escola-texto-dois>inserir o segundo paragrafo</p>
         <div>
-
-</body>
-</html>
+<img class="escola-imagem" src="escola-imagem.jpg" alt="escola-imagem"> class
+<section>
+<section class=estudante
+ h2 class="estudante titulo">quem são nossos estudantes </h2>
